Feat: 어떤 랜딩페이지에서도 사용자 행동 데이터를 받을 수 있는 기능 추가